--- a/style.css
+++ b/style.css
@@ -3,3 +3,196 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: antiquewhite;
+  height: 100vh;
+}
+
+header {
+  box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1);
+}
+
+.calculator {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  color: black;
+}
+
+.name-theme {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.title {
+  letter-spacing: 1.5px;
+  font-size: 25px;
+}
+.theme {
+  display: flex;
+  gap: 15px;
+}
+.theme h4 {
+  font-size: 10px;
+  letter-spacing: 3px;
+  place-self: end;
+  margin-bottom: 5px;
+}
+
+.screen {
+  background-color: darkslateblue;
+  padding: 25px 30px;
+  text-align: right;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+}
+.num2 {
+  font-size: 30px;
+}
+.num1 {
+  color: white;
+}
+
+main {
+  background-color: darkslateblue;
+  padding: 20px;
+  border-radius: 5px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 15px;
+  margin: auto;
+  box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1);
+}
+
+.clear,
+.equal {
+  grid-column: span 2;
+  padding: 15px 10px;
+  color: black;
+  font-size: 15px;
+}
+
+.backspace {
+  font-size: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+}
+
+button {
+  padding: 8px 15px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.number {
+  font-size: 25px;
+  color: black;
+  background-color: lightcyan;
+  border-bottom: 3px solid lightblue;
+}
+
+.plus,
+.minus,
+.multiply,
+.divide {
+  font-size: 20px;
+  color: black;
+  background-color: lightcyan;
+  border-bottom: 3px solid lightblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.backspace,
+.clear {
+  background-color: lightgreen;
+  border-bottom: 3px solid limegreen;
+  letter-spacing: 1px;
+}
+
+.equal {
+  background-color: lightcoral;
+  border-bottom: 3px solid rgb(235, 72, 72);
+}
+
+.toggle_input {
+  opacity: 0;
+}
+.toggle_wrapper {
+  position: relative;
+}
+
+.background {
+  background-color: darkslateblue;
+  display: block;
+  width: 100%;
+  height: 18px;
+  border-radius: 20px;
+  position: absolute;
+  top: 0;
+  pointer-events: none;
+}
+
+.container_label {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 5px;
+  margin-bottom: 5px;
+  font-size: 12px;
+}
+
+label {
+  cursor: pointer;
+}
+
+input {
+  height: 14px;
+  width: 14px;
+  margin: 2.5px 0;
+  cursor: pointer;
+}
+
+input:first-child {
+  margin-left: 2px;
+}
+
+input:nth-child(3) {
+  margin-right: 2px;
+}
+
+.button {
+  position: absolute;
+  height: 14px;
+  width: 14px;
+  background-color: darkred;
+  border-radius: 50%;
+  top: 2px;
+  left: 2px;
+  pointer-events: none;
+  transition: all 300ms ease-in-out;
+}
+
+input#tree:checked ~ .button {
+  left: 70.3%;
+}
+
+input#two:checked ~ .button {
+  left: 50%;
+  right: auto;
+  transform: translate(-50%);
+}
