--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ body {
   height: 100vh;
 }
 
-header {
+/* header {
   box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1);
-}
+} */
 
 .calculator {
   display: flex;
@@ -69,7 +69,7 @@ main {
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 15px;
   margin: auto;
-  box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1);
+  /* box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1); */
 }
 
 .clear,
@@ -105,11 +105,16 @@ button {
   border-bottom: 3px solid lightblue;
 }
 
+.number:active {
+  border-bottom: 0px;
+  transform: translateY(0.7px);
+}
+
 .plus,
 .minus,
 .multiply,
 .divide {
-  font-size: 20px;
+  font-size: 25px;
   color: black;
   background-color: lightcyan;
   border-bottom: 3px solid lightblue;
@@ -128,6 +133,11 @@ button {
 .equal {
   background-color: lightcoral;
   border-bottom: 3px solid rgb(235, 72, 72);
+}
+
+.click:active {
+  border-bottom: 0px;
+  transform: translateY(0.7px);
 }
 
 .toggle_input {
@@ -179,7 +189,7 @@ input:nth-child(3) {
   position: absolute;
   height: 14px;
   width: 14px;
-  background-color: darkred;
+  background-color: lightcoral;
   border-radius: 50%;
   top: 2px;
   left: 2px;
