--- a/style.css
+++ b/style.css
@@ -2,25 +2,23 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: bold;
 }
 
 body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: antiquewhite;
+  background-image: linear-gradient(to bottom right, rgba(79, 51, 176, 1), rgba(210, 53, 165));
   height: 100vh;
 }
-
-/* header {
-  box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1);
-} */
 
 .calculator {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  color: black;
+  color: #071115;
 }
 
 .name-theme {
@@ -32,64 +30,69 @@ body {
 .title {
   letter-spacing: 1.5px;
   font-size: 25px;
+  font-family: "Kdam Thmor Pro", sans-serif;
 }
 .theme {
   display: flex;
   gap: 15px;
 }
 .theme h4 {
-  font-size: 10px;
+  font-size: 12px;
   letter-spacing: 3px;
   place-self: end;
   margin-bottom: 5px;
+  font-family: "Kdam Thmor Pro", sans-serif;
 }
 
 .screen {
-  background-color: darkslateblue;
-  padding: 25px 30px;
+  background-color: #071115;
+  padding: 45px 30px;
   text-align: right;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 20px;
+  /* gap: 0px; */
 }
 .num2 {
-  font-size: 30px;
+  font-size: 28px;
+  color: white;
+  margin-bottom: -34px;
 }
 .num1 {
   color: white;
+  font-size: 28px;
+  margin-top: -34px;
 }
 
 main {
-  background-color: darkslateblue;
+  background-color: #071115;
   padding: 20px;
   border-radius: 5px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 15px;
-  margin: auto;
-  /* box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1); */
 }
 
 .clear,
 .equal {
   grid-column: span 2;
   padding: 15px 10px;
-  color: black;
+  color: #071115;
   font-size: 15px;
+  align-items: center;
 }
 
 .backspace {
-  font-size: 15px;
+  font-size: 17px;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: black;
+  color: #071115;
 }
 
 button {
-  padding: 8px 15px;
+  padding: 8px 25px;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -100,14 +103,14 @@ button {
 
 .number {
   font-size: 25px;
-  color: black;
-  background-color: lightcyan;
-  border-bottom: 3px solid lightblue;
+  color: white;
+  background-color: #1b2f38;
+  border-bottom: 3px solid #386275;
 }
 
 .number:active {
   border-bottom: 0px;
-  transform: translateY(0.7px);
+  transform: translateY(0.5px);
 }
 
 .plus,
@@ -115,9 +118,9 @@ button {
 .multiply,
 .divide {
   font-size: 25px;
-  color: black;
-  background-color: lightcyan;
-  border-bottom: 3px solid lightblue;
+  color: #aa00a4;
+  background-color: #2e1f39;
+  border-bottom: 3px solid #604077;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -125,19 +128,21 @@ button {
 
 .backspace,
 .clear {
-  background-color: lightgreen;
-  border-bottom: 3px solid limegreen;
+  color: #bd3740;
+  background-color: #2d191e;
+  border-bottom: 3px solid #5c323d;
   letter-spacing: 1px;
 }
 
 .equal {
-  background-color: lightcoral;
-  border-bottom: 3px solid rgb(235, 72, 72);
+  background-color: #223323;
+  border-bottom: 3px solid #466949;
+  color: white;
 }
 
 .click:active {
   border-bottom: 0px;
-  transform: translateY(0.7px);
+  transform: translateY(0.5px);
 }
 
 .toggle_input {
@@ -148,7 +153,7 @@ button {
 }
 
 .background {
-  background-color: darkslateblue;
+  background-color: #071115;
   display: block;
   width: 100%;
   height: 18px;
@@ -189,7 +194,7 @@ input:nth-child(3) {
   position: absolute;
   height: 14px;
   width: 14px;
-  background-color: lightcoral;
+  background-color: white;
   border-radius: 50%;
   top: 2px;
   left: 2px;
@@ -205,4 +210,134 @@ input#two:checked ~ .button {
   left: 50%;
   right: auto;
   transform: translate(-50%);
+}
+
+/* THEME 2 STYLE */
+.theme2 {
+  background-image: linear-gradient(to bottom right, rgba(79, 51, 176, 1), rgba(210, 53, 165));
+}
+
+.theme2 .screen {
+  background-color: white;
+}
+
+.theme2 main {
+  background-color: white;
+}
+
+.theme2 .calculator {
+  color: white;
+}
+
+.theme2 .background {
+  background-color: white;
+}
+
+.theme2 .button {
+  background-color: #071115;
+}
+
+.theme2 .clear {
+  background-color: #ffd5d8;
+  color: #fc4552;
+  border-bottom: 3px solid #dab3b5;
+}
+
+.theme2 .backspace {
+  background-color: #ffd5d8;
+  color: #fc4552;
+  border-bottom: 3px solid #dab3b5;
+}
+
+.theme2 button {
+  background-color: #c3eaff;
+  color: #071115;
+  border-bottom: 3px solid #93afbe;
+}
+
+.theme2 .num1 {
+  color: #071115;
+}
+
+.theme2 .num2 {
+  color: #071115;
+}
+
+.theme2 .tc {
+  background-color: #ffd0fd;
+  color: #f967f3;
+  border-bottom: 3px solid #d8afd6;
+}
+
+.theme2 .equal {
+  background-color: #adf9e7;
+  color: #071115;
+  border-bottom: 3px solid #89c5b7;
+}
+/* THEME 2 STYLE END*/
+
+/* THEME 3 STYLE */
+.theme3 {
+  background-image: linear-gradient(#2196f3, #e91e63);
+}
+
+.theme3 .screen {
+  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.theme3 main {
+  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.theme3 .background {
+  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.theme3 button {
+  color: white;
+  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  border-bottom: 3px solid white;
+}
+
+.theme3 .calculator {
+  color: white;
+}
+/* THEME 3 STYLE END */
+
+footer {
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.1);
+  text-align: center;
+  position: fixed;
+  font-family: "Roboto Mono", monospace;
+  color: #071115;
+  font-size: 15px;
+}
+
+footer span {
+  color: white;
+  font-size: 15px;
+}
+
+footer span:hover {
+  cursor: pointer;
+  color: rgb(0, 183, 207);
 }
